--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container contents">
         <div class="main-headline2">
             <h2 class="headline-text">Who will you be matched up with?</h2>
-            <h4 class="sub-headline">Find out today</h4>
+            <h3 class="sub-headline"><a href="/survey">Find out today</a></h3>
         </div>
     </div>
 </body>
