--- a/survey.html
+++ b/survey.html
@@ -14,7 +14,151 @@
 </head>
 
 <body>
-    <h1>SURVEY SERVER 123</h1>
+
+    <div class="container">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+  Launch demo modal
+</button>
+
+        <!-- Modal -->
+        <div class="modal" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+                    </div>
+                    <div class="modal-body">
+                        <h4 id="base"></h4>
+                        <h4 id="match"></h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-headline">
+            <h1 class="headline-text">Welcome, please fill out the survey to find a friend</h1>
+            <h3 class="sub-headline"><a href="/">Back to homepage</a></h3>
+        </div>
+        <div class="main-body">
+            <form>
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="Enter your name" required>
+                <label for="photo">Photo URL</label>
+                <input type="text" id="photo" placeholder="Enter your photo URL" required>
+                <p>Question One: You prefer to cook for yourself</p>
+                <input id="Q1" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Two: You enjoy going to events with large crowds</p>
+                <input id="Q2" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Three: You enjoy outdoor activites such as hiking and swimming</p>
+                <input id="Q3" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Four: You think honesty is important even if it will hurt someones feelings</p>
+                <input id="Q4" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Five: You enjoy art and music</p>
+                <input id="Q5" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Six: You like to laugh and have a good sense of humor</p>
+                <input id="Q6" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Seven: You try to always listen to your conscience</p>
+                <input id="Q7" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Eight: You feel compassion when you see someone is upset</p>
+                <input id="Q8" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Nine: You have sentimental feelings about the place where you grew up</p>
+                <input id="Q9" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <p>Question Ten: You are generally happy and try to not let things get you down</p>
+                <input id="Q10" type="number" min=1 max=5 required placeholder="1 strongly disagree - 5 strongly agree">
+                <button id="surveySubmit" type="submit">Submit your answers</button>
+        </div>
+
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script>
+    $("#surveySubmit").on("click", gatherValues);
+
+    function Friend(name, photo, values) {
+        this.name = name;
+        this.photo = photo;
+        this.score = values;
+        return this;
+    }
+
+    function gatherValues() {
+        event.preventDefault();
+        var answers = [];
+        var name = $("#name").val().trim();
+        var photo = $("#photo").val().trim();
+        for (var Qnum = 1; Qnum < 11; Qnum++) {
+            var answer = $("#Q" + Qnum).val();
+            answers.push(answer);
+            if (name === "" || photo === "" || answers[Qnum] === "") {
+                alert("You must have missed some information");
+                return;
+            }
+        }
+        var person = new Friend(name, photo, answers);
+        makePost(person);
+    }
+
+    function makePost(person) {
+        $.post("/api/friends", person)
+            .done(function(data) {
+                console.log(data);
+                alert("GOT it!");
+                gatherAll(person.name);
+            });
+    }
+
+    function gatherAll(name) {
+        var currentURL = window.location.origin;
+        $.ajax({
+                url: currentURL + "/api/friends",
+                method: "GET"
+            })
+            .done(function(friendsData) {
+                for (var index = 0; index < friendsData.length; index++) {
+                    var total = 0;
+                    for (var sIndex = 0; sIndex < friendsData[index].score.length; sIndex++) {
+                        var score = parseInt(friendsData[index].score[sIndex]);
+                        total += score;
+                    }
+                    friendsData[index].total = total;
+                }
+                friendsData.sort(function(a, b) {
+                    return a.total - b.total;
+                });
+                for (var newIndex = 0; newIndex < friendsData.length; newIndex++) {
+                    if (name === friendsData[newIndex].name) {
+                        var saveIndex = newIndex;
+                    }
+                }
+                if (saveIndex === 0) {
+                    console.log(friendsData[saveIndex].name, "your match is", friendsData[saveIndex + 1].name);
+                } else if (saveIndex === friendsData.length - 1) {
+                    console.log(friendsData[saveIndex].name, "your match is", friendsData[saveIndex - 1].name);
+                } else {
+                    comparison(friendsData[saveIndex].total, friendsData[saveIndex - 1].total, friendsData[saveIndex + 1].total);
+
+                    function comparison(base, compareOne, compareTwo) {
+                        var caseOne = Math.abs(base - compareOne);
+                        var caseTwo = Math.abs(base - compareTwo);
+                        console.log(caseOne, "first comparison");
+                        console.log(caseTwo, "second comparison");
+                        if (caseOne < caseTwo) {
+                            console.log(friendsData[saveIndex].name, "your match is", friendsData[saveIndex - 1].name);
+                        } else {
+                            console.log(friendsData[saveIndex].name, "your match is", friendsData[saveIndex + 1].name);
+                        }
+                    }
+                }
+            });
+    }
+</script>
 
 </html>
