--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <h2 class="headline-text">Who will you be matched up with?</h2>
             <h3 class="sub-headline"><a href="/survey">Find out today</a></h3>
         </div>
+        <footer class="foot">
+            <span class="foot-text"><a href="/api/friends">API</a></span>
+            <span class="foot-text"><a href="https://github.com/Husspm/hiFriends">GitHub</a></span>
+        </footer>
     </div>
 </body>
 
